Допилил апи сбоев системы
